// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should render correctly with placement should renders tooltip with placement bottom 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":rh:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with placement should renders tooltip with placement left 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r9:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with placement should renders tooltip with placement right 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":rd:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with placement should renders tooltip with placement top 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r5:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with required props 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r0:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    Children
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with required props and visible 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r1:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    Children
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with sizes should renders tooltip with placement large 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r15:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with sizes should renders tooltip with placement medium 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":r11:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with sizes should renders tooltip with placement small 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":rt:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with variant should renders tooltip with placement default 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":rl:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;

exports[`Tooltip should render correctly with variant should renders tooltip with placement primary 1`] = `
<DocumentFragment>
  .cache-yb56yg-StyledChildrenContainer {
  display: inherit;
}

<div
    aria-describedby=":rp:"
    class="cache-yb56yg-StyledChildrenContainer ep3agpf0"
  >
    <p
      data-testid="children"
    >
      Children
    </p>
  </div>
</DocumentFragment>
`;
